--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,17 @@
 baseURL = "/"
 languageCode = "en-us"
 title = "Sutasoma: Journey to Decentralization"
-theme = "ghostwriter"
+theme = ["ghostwriter", "plausible-hugo"]
 relativeURLS=true
 summaryLenght = 70
 disqusShortname = "sutasoma"
 copyright = "Faris Maulana"
 pygmentsUseClasses=true
+
+[params.plausible]
+  enable = true  # Whether to enable plausible tracking
+  domain = "sutasoma.eth.link"  # Plausible "domain" name/id in your dashboard
+
 
 [permalinks]
     posts = "/:year/:month/:day/:title/"
@@ -24,18 +29,18 @@ pygmentsUseClasses=true
     shareLinkedIn = true
     rss = true
     dateFormat = "Mon, Jan 2, 2006"
+    comments = true
+
 
 [menu]
       [[menu.main]]
         identifier = "about"
         name = "about"
-        pre = "<i class='fa fa-heart'></i>"
         url = "/about/"
         weight = -100
 
       [[menu.main]]
         identifier = "blog"
         name = "all posts"
-        pre = "<i class='fa fa-heart'></i>"
         url = "/posts/"
         weight = -110
